--- a/P000353.opf/meta.yml
+++ b/P000353.opf/meta.yml
@@ -3,5 +3,32 @@ initial_creation_type: ocr
 source_metadata:
   id: bdr:W21888
   title: གཏེར་ཆོས། ཀུན་བཟང་བདེ་སྐྱོང་དབང་མོ།
-  volume: ''
+  volume:
+    67016e904ee44b43a971401ca561daec:
+      image_group_id: I1983
+      title: ''
+      volume_number: 1
+      total_pages: 517
+    805134ef23ee46dca3ce35eb7688f459:
+      image_group_id: I1984
+      title: ''
+      volume_number: 2
+      total_pages: 587
+    1614b2fc35624495bc26cb2c4f08cbca:
+      image_group_id: I1985
+      title: ''
+      volume_number: 3
+      total_pages: 507
+    6ecdb0f42fdf4ed3adda14e946c1b7db:
+      image_group_id: I1986
+      title: ''
+      volume_number: 4
+      total_pages: 551
   author: ''
+ebook_metadata:
+  title: གཏེར་ཆོས། ཀུན་བཟང་བདེ་སྐྱོང་དབང་མོ།
+  author: ''
+  sku: P000353
+  cover: cover.jpg
+  layers:
+  - pagination
