--- a/P000353.opf/meta.yml
+++ b/P000353.opf/meta.yml
@@ -1,5 +1,7 @@
 id: P000353
 initial_creation_type: ocr
+created_at: 14/03/2020
+last_modified_at: 24/11/2021
 source_metadata:
   id: bdr:W21888
   title: གཏེར་ཆོས། ཀུན་བཟང་བདེ་སྐྱོང་དབང་མོ།
@@ -25,10 +27,3 @@ source_metadata:
       title: ''
       volume_number: 4
       total_pages: 551
-ebook_metadata:
-  title: གཏེར་ཆོས། ཀུན་བཟང་བདེ་སྐྱོང་དབང་མོ།
-  author: ''
-  sku: P000353
-  cover: cover.jpg
-  layers:
-  - pagination
